@@ -1,5 +1,10 @@
 2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/component/encoders/aac/aac_wizard.py:
+	  Fix title and translation.
+
+2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion-flash.spec.in:
 	  Add requirements.
 
